--- a/dev/index.html
+++ b/dev/index.html
@@ -7,24 +7,13 @@
 
 <style>
 body { font-family: Arial, sans-serif; max-width: 750px; margin: auto; padding: 1rem; }
-
-.dev-banner {
-  background:#fff3cd;
-  border:1px solid #ffeeba;
-  color:#856404;
-  padding:0.75rem;
-  margin-bottom:1rem;
-  text-align:center;
-  font-weight:bold;
-}
-
 .section { border: 1px solid #ccc; padding: 1rem; margin-top: 1rem; }
 .meal-controls, .training-controls { display: flex; gap: 0.5rem; }
 select, input, button { padding: 0.4rem; }
 .meal-controls select { flex: 1; }
 .item { display: flex; justify-content: space-between; margin-top: 0.3rem; }
-.item button { width: auto; }
 .locked { opacity: 0.6; pointer-events: none; }
+
 .summary-boxes { display: flex; gap: 0.5rem; flex-wrap: wrap; }
 .summary-box { border: 1px solid #ccc; padding: 0.5rem; min-width: 90px; text-align: center; }
 .summary-box.positive { background:#e6f4ea; color:#1e6b3a; }
@@ -32,86 +21,49 @@ select, input, button { padding: 0.4rem; }
 .summary-box.zero { background:#eee; color:#333; }
 .summary-box.nodata { background:#f5f5f5; color:#777; font-style:italic; }
 
-.top-buttons { display:flex; justify-content:flex-end; gap:0.5rem; margin-bottom:1rem; }
-#unlockBtn { margin-top:0.5rem; }
+.dev-banner {
+  background: #fff3cd;
+  border: 1px solid #ffeeba;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  color: #856404;
+  font-weight: bold;
+}
+
+.top-actions {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
 </style>
 </head>
+
 <body>
 
-<div class="dev-banner">
-⚠️ Kehitysversio – tätä versiota käytetään testaamiseen. Älä luota tuotantodataan.
-</div>
+<div class="dev-banner">⚠️ KEHITYSVERSIO – Älä käytä tuotantodatan kanssa</div>
 
 <h2>Ruokaseuranta</h2>
 <h4>versio DEV 1.2</h4>
 
-<div class="top-buttons">
+<div class="top-actions">
   <button onclick="downloadCSV()">CSV-varmuuskopio</button>
-  <button onclick="backupJSON()">JSON-varmuuskopio</button>
-  <button onclick="restoreJSON()">Palauta JSON</button>
+  <button onclick="downloadJSON()">JSON-varmuuskopio</button>
+  <label style="border:1px solid #ccc; padding:0.4rem; cursor:pointer;">
+    Palauta JSON
+    <input type="file" accept=".json" style="display:none" onchange="restoreJSON(event)">
+  </label>
 </div>
 
 <label>Päivä</label>
 <input type="date" id="date">
 <br>
-<button id="unlockBtn" style="display:none;" onclick="unlockDay()">Muokkaa tietoja</button>
+<button id="unlockBtn" style="display:none" onclick="unlockDay()">Muokkaa tietoja</button>
 
 <div id="content">
 
-<!-- AAMUPALA -->
-<div class="section" id="aamupala">
-<h3>Aamupala</h3>
-<div class="meal-controls">
-<select id="aamupalaSelect"></select>
-<input type="number" id="aamupalaGrams" placeholder="g">
-<button onclick="addFood('aamupala')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
-
-<!-- LOUNAS -->
-<div class="section" id="lounas">
-<h3>Lounas</h3>
-<div class="meal-controls">
-<select id="lounasSelect"></select>
-<input type="number" id="lounasGrams" placeholder="g">
-<button onclick="addFood('lounas')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
-
-<!-- VÄLIPALAT -->
-<div class="section" id="valipalat">
-<h3>Välipalat</h3>
-<div class="meal-controls">
-<select id="valipalatSelect"></select>
-<input type="number" id="valipalatGrams" placeholder="g">
-<button onclick="addFood('valipalat')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
-
-<!-- ILLALLINEN -->
-<div class="section" id="illallinen">
-<h3>Illallinen</h3>
-<div class="meal-controls">
-<select id="illallinenSelect"></select>
-<input type="number" id="illallinenGrams" placeholder="g">
-<button onclick="addFood('illallinen')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
-
-<!-- ILTAPALA -->
-<div class="section" id="iltapala">
-<h3>Iltapala</h3>
-<div class="meal-controls">
-<select id="iltapalaSelect"></select>
-<input type="number" id="iltapalaGrams" placeholder="g">
-<button onclick="addFood('iltapala')">Lisää</button>
-</div>
-<div class="foods"></div>
-</div>
+<!-- ATERIAT GENEROIDAAN -->
+<div id="meals"></div>
 
 <!-- TREENIT -->
 <div class="section">
@@ -135,46 +87,238 @@ select, input, button { padding: 0.4rem; }
 </div>
 
 <script>
-/* --- KAIKKI AIEMPI JS SÄILYTETTY --- */
-</script>
+/* =================== DATA =================== */
+const BMR = 2000;
 
-<script>
-/* =========================
-   JSON VARMUUSKOPIO
-   ========================= */
+const foodsDB = {
+  appelsiini:{kcal:75,default:100},
+  kauraleipa:{kcal:120,default:100},
+  kaurapuuro_banaani:{kcal:450,default:100},
+  kaurapuuro_piltti:{kcal:383,default:100},
+  mehukeitto:{kcal:44,default:400},
+  ruisleipa:{kcal:96,default:100},
 
-function backupJSON() {
-  const data = {};
-  for (let i = 0; i < localStorage.length; i++) {
-    const key = localStorage.key(i);
-    data[key] = localStorage.getItem(key);
+  gluteeniton_pasta:{kcal:356,default:0},
+  kanakastike_kevyt:{kcal:95,default:0},
+  kanakastike_semi:{kcal:120,default:0},
+  kanakastike_tuhti:{kcal:150,default:0},
+  kanaperuna:{kcal:83,default:0},
+  lasagne:{kcal:120,default:0},
+  peruna:{kcal:75,default:0},
+  perunamuussi:{kcal:120,default:0},
+  tonnikalapihvit:{kcal:170,default:0},
+  täysjyväpasta:{kcal:343,default:0},
+  täysjyväriisi:{kcal:145,default:0}
+};
+
+const mealFoods = {
+  aamupala:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
+  valipalat:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
+  iltapala:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
+  lounas:["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"],
+  illallinen:["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"]
+};
+
+/* =================== STATE =================== */
+let dayData, isLocked=false;
+
+function emptyDay(){
+  return {foods:{aamupala:[],lounas:[],valipalat:[],illallinen:[],iltapala:[]},trainings:[]};
+}
+
+/* =================== UI BUILD =================== */
+function buildMeals(){
+  const container=document.getElementById("meals");
+  for(let meal in mealFoods){
+    container.innerHTML+=`
+    <div class="section" id="${meal}">
+      <h3>${meal.charAt(0).toUpperCase()+meal.slice(1)}</h3>
+      <div class="meal-controls">
+        <select id="${meal}Select"></select>
+        <input id="${meal}Grams" type="number" placeholder="g">
+        <button onclick="addFood('${meal}')">Lisää</button>
+      </div>
+      <div class="foods"></div>
+    </div>`;
   }
-  const blob = new Blob([JSON.stringify(data, null, 2)], { type: "application/json" });
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "ruokaseuranta_backup.json";
+}
+
+function fillSelects(){
+  for(let meal in mealFoods){
+    const sel=document.getElementById(meal+"Select");
+    sel.innerHTML='<option value="">Valitse ruoka</option>';
+    mealFoods[meal].sort().forEach(f=>{
+      sel.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`;
+    });
+    sel.addEventListener("change",()=>{
+      const g=document.getElementById(meal+"Grams");
+      g.value=sel.value?foodsDB[sel.value].default:"";
+    });
+  }
+}
+
+/* =================== CORE =================== */
+function addFood(meal){
+  if(isLocked) return;
+  const sel=document.getElementById(meal+"Select");
+  const grams=document.getElementById(meal+"Grams");
+  if(!sel.value || !grams.value) return;
+  dayData.foods[meal].push({id:sel.value,grams:Number(grams.value)});
+  sel.value=""; grams.value="";
+  saveDraft(); render();
+}
+
+function removeFood(meal,i){
+  if(isLocked) return;
+  dayData.foods[meal].splice(i,1);
+  saveDraft(); render();
+}
+
+function addTraining(){
+  if(isLocked) return;
+  if(!trainingName.value || !trainingKcal.value) return;
+  dayData.trainings.push({name:trainingName.value,kcal:Number(trainingKcal.value)});
+  trainingName.value=""; trainingKcal.value="";
+  saveDraft(); render();
+}
+
+function removeTraining(i){
+  if(isLocked) return;
+  dayData.trainings.splice(i,1);
+  saveDraft(); render();
+}
+
+/* =================== RENDER =================== */
+function render(){
+  let foodKcal=0;
+  for(let meal in dayData.foods){
+    const box=document.querySelector(`#${meal} .foods`);
+    box.innerHTML="";
+    dayData.foods[meal].forEach((f,i)=>{
+      const kcal=Math.round(f.grams*foodsDB[f.id].kcal/100);
+      foodKcal+=kcal;
+      box.innerHTML+=`
+      <div class="item">${f.id.replaceAll("_"," ")} ${f.grams} g (${kcal} kcal)
+      <button onclick="removeFood('${meal}',${i})">❌</button></div>`;
+    });
+  }
+
+  trainings.innerHTML="";
+  dayData.trainings.forEach((t,i)=>{
+    trainings.innerHTML+=`
+    <div class="item">${t.name} (${t.kcal} kcal)
+    <button onclick="removeTraining(${i})">❌</button></div>`;
+  });
+
+  const trainKcal=dayData.trainings.reduce((s,t)=>s+t.kcal,0);
+  const net=Math.round(foodKcal-(BMR+trainKcal));
+
+  summary.innerHTML=`
+    Ruoasta: ${foodKcal} kcal<br>
+    Perusaineenvaihdunta: ${BMR} kcal<br>
+    Treeneistä: ${trainKcal} kcal<br><br>
+    <strong>Netto: ${net} kcal</strong>
+  `;
+
+  renderFiveDaySummary();
+}
+
+/* =================== 5 PÄIVÄÄ =================== */
+function renderFiveDaySummary(){
+  let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`,total=0;
+  for(let i=1;i<=5;i++){
+    const d=new Date(date.value); d.setDate(d.getDate()-i);
+    const key=d.toISOString().split("T")[0];
+    const stored=localStorage.getItem(key);
+    if(stored){
+      const data=JSON.parse(stored);
+      let fkc=0;
+      Object.values(data.foods).flat().forEach(f=>fkc+=f.grams*foodsDB[f.id].kcal/100);
+      let tk=data.trainings.reduce((s,t)=>s+t.kcal,0);
+      let n=Math.round(fkc-(BMR+tk)); total+=n;
+      let cls=n>0?"positive":n<0?"negative":"zero";
+      html+=`<div class="summary-box ${cls}"><h4>-${i}</h4>${n} kcal</div>`;
+    } else {
+      html+=`<div class="summary-box nodata"><h4>-${i}</h4>Ei dataa</div>`;
+    }
+  }
+  html+=`</div><br><strong>Yhteensä: ${total} kcal</strong>`;
+  fiveDaySummary.innerHTML=html;
+}
+
+/* =================== STORAGE =================== */
+function saveDraft(){ localStorage.setItem("draft-"+date.value,JSON.stringify(dayData)); }
+function saveDay(){ localStorage.setItem(date.value,JSON.stringify(dayData)); localStorage.removeItem("draft-"+date.value); lockDay(); }
+
+function lockDay(){
+  isLocked=true;
+  content.classList.add("locked");
+  saveBtn.style.display="none";
+  unlockBtn.style.display="block";
+}
+function unlockDay(){
+  isLocked=false;
+  content.classList.remove("locked");
+  saveBtn.style.display="block";
+  unlockBtn.style.display="none";
+}
+
+/* =================== BACKUP =================== */
+function downloadCSV(){
+  let csv="Päivämäärä,Kalorit ruoasta,Treenit,BMR,Netto\n";
+  for(let i=0;i<localStorage.length;i++){
+    const key=localStorage.key(i);
+    if(!/^\d{4}-\d{2}-\d{2}$/.test(key)) continue;
+    const d=JSON.parse(localStorage.getItem(key));
+    let f=0;
+    Object.values(d.foods).flat().forEach(x=>f+=x.grams*foodsDB[x.id].kcal/100);
+    let t=d.trainings.reduce((s,x)=>s+x.kcal,0);
+    csv+=`${key},${Math.round(f)},${t},${BMR},${Math.round(f-(BMR+t))}\n`;
+  }
+  const blob=new Blob([csv],{type:"text/csv"});
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="ruokaseuranta.csv";
   a.click();
 }
 
-function restoreJSON() {
-  const input = document.createElement("input");
-  input.type = "file";
-  input.accept = "application/json";
-  input.onchange = e => {
-    const file = e.target.files[0];
-    if (!file) return;
-    const reader = new FileReader();
-    reader.onload = () => {
-      const data = JSON.parse(reader.result);
-      localStorage.clear();
-      Object.keys(data).forEach(k => localStorage.setItem(k, data[k]));
-      alert("Varmuuskopio palautettu. Sivu ladataan uudelleen.");
-      location.reload();
-    };
-    reader.readAsText(file);
-  };
-  input.click();
+function downloadJSON(){
+  const data={};
+  for(let i=0;i<localStorage.length;i++){
+    const k=localStorage.key(i);
+    data[k]=localStorage.getItem(k);
+  }
+  const blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="ruokaseuranta_backup.json";
+  a.click();
 }
+
+function restoreJSON(e){
+  const file=e.target.files[0];
+  if(!file) return;
+  const r=new FileReader();
+  r.onload=()=>{
+    const data=JSON.parse(r.result);
+    localStorage.clear();
+    for(let k in data){ localStorage.setItem(k,data[k]); }
+    alert("Varmuuskopio palautettu. Lataa sivu uudelleen.");
+  };
+  r.readAsText(file);
+}
+
+/* =================== INIT =================== */
+buildMeals();
+fillSelects();
+
+date.addEventListener("change",()=>{
+  const f=localStorage.getItem(date.value);
+  const d=localStorage.getItem("draft-"+date.value);
+  if(f){ dayData=JSON.parse(f); lockDay(); }
+  else { isLocked=false; content.classList.remove("locked"); saveBtn.style.display="block"; unlockBtn.style.display="none"; dayData=d?JSON.parse(d):emptyDay(); }
+  render();
+});
 </script>
 
 </body>
