--- a/dev2/index.html
+++ b/dev2/index.html
@@ -13,59 +13,42 @@ select, input, button { padding: 0.4rem; }
 .meal-controls select { flex: 1; }
 .item { display: flex; justify-content: space-between; margin-top: 0.3rem; }
 .locked { opacity: 0.6; pointer-events: none; }
-
 .summary-boxes { display: flex; gap: 0.5rem; flex-wrap: wrap; }
-.summary-box { border: 1px solid #ccc; padding: 0.5rem; min-width: 90px; text-align: center; }
+.summary-box { border: 1px solid #ccc; padding: 0.5rem; min-width: 110px; text-align: center; }
 .summary-box.positive { background:#e6f4ea; color:#1e6b3a; }
 .summary-box.negative { background:#fbeaea; color:#8a1f1f; }
 .summary-box.zero { background:#eee; color:#333; }
 .summary-box.nodata { background:#f5f5f5; color:#777; font-style:italic; }
-
-.dev-banner {
-  background: #fff3cd;
-  border: 1px solid #ffeeba;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  color: #856404;
-  font-weight: bold;
-}
-
-.top-actions {
-  display: flex;
-  gap: 0.5rem;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-}
+#backupBtn, #jsonBtn { float:right; margin-left:0.5rem; }
 </style>
 </head>
-
 <body>
 
-<div class="dev-banner">⚠️ KEHITYSVERSIO – Älä käytä tuotantodatan kanssa</div>
-
 <h2>Ruokaseuranta</h2>
-<h4>versio DEV 1.2</h4>
+<h4>versio 2.0</h4>
 
-<div class="top-actions">
-  <button onclick="downloadCSV()">CSV-varmuuskopio</button>
-  <button onclick="downloadJSON()">JSON-varmuuskopio</button>
-  <label style="border:1px solid #ccc; padding:0.4rem; cursor:pointer;">
-    Palauta JSON
-    <input type="file" accept=".json" style="display:none" onchange="restoreJSON(event)">
-  </label>
-</div>
+<button id="jsonBtn" onclick="downloadJSON()">JSON export</button>
+<button id="backupBtn" onclick="downloadCSV()">CSV export</button>
 
 <label>Päivä</label>
 <input type="date" id="date">
-<br>
-<button id="unlockBtn" style="display:none" onclick="unlockDay()">Muokkaa tietoja</button>
+<button id="unlockBtn" style="display:none;" onclick="unlockDay()">Muokkaa</button>
 
 <div id="content">
 
-<!-- ATERIAT GENEROIDAAN -->
-<div id="meals"></div>
+<!-- MEALS -->
+<script>
+const mealNames = {
+  aamupala:"Aamupala",
+  lounas:"Lounas",
+  valipalat:"Välipalat",
+  illallinen:"Illallinen",
+  iltapala:"Iltapala"
+};
+</script>
 
-<!-- TREENIT -->
+</div>
+
 <div class="section">
 <h3>Treenit</h3>
 <div class="training-controls">
@@ -84,209 +67,114 @@ select, input, button { padding: 0.4rem; }
 <div id="fiveDaySummary"></div>
 </div>
 
-</div>
-
 <script>
-/* =================== DATA =================== */
 const BMR = 2000;
+const DAILY_TARGETS = { carbs:432, fat:72 };
 
 const foodsDB = {
-  appelsiini:{kcal:75,default:100},
-  kauraleipa:{kcal:120,default:100},
-  kaurapuuro_banaani:{kcal:450,default:100},
-  kaurapuuro_piltti:{kcal:383,default:100},
-  mehukeitto:{kcal:44,default:400},
-  ruisleipa:{kcal:96,default:100},
-
-  gluteeniton_pasta:{kcal:356,default:0},
-  kanakastike_kevyt:{kcal:95,default:0},
-  kanakastike_semi:{kcal:120,default:0},
-  kanakastike_tuhti:{kcal:150,default:0},
-  kanaperuna:{kcal:83,default:0},
-  lasagne:{kcal:120,default:0},
-  peruna:{kcal:75,default:0},
-  perunamuussi:{kcal:120,default:0},
-  tonnikalapihvit:{kcal:170,default:0},
-  täysjyväpasta:{kcal:343,default:0},
-  täysjyväriisi:{kcal:145,default:0}
+  kauraleipa:{kcal:120,carbs:0,fat:0,default:100},
+  ruisleipa:{kcal:96,carbs:0,fat:0,default:100},
+  appelsiini:{kcal:75,carbs:0,fat:0,default:100},
+  mehukeitto:{kcal:44,carbs:0,fat:0,default:400},
+  gluteeniton_pasta:{kcal:356,carbs:0,fat:0,default:0},
+  kanakastike_kevyt:{kcal:95,carbs:0,fat:0,default:0},
+  peruna:{kcal:75,carbs:0,fat:0,default:0}
 };
 
 const mealFoods = {
-  aamupala:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  valipalat:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  iltapala:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
-  lounas:["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"],
-  illallinen:["gluteeniton_pasta","kanakastike_kevyt","kanakastike_semi","kanakastike_tuhti","kanaperuna","lasagne","peruna","perunamuussi","tonnikalapihvit","täysjyväpasta","täysjyväriisi"]
+  aamupala:["kauraleipa","ruisleipa","appelsiini","mehukeitto"],
+  valipalat:["kauraleipa","ruisleipa","appelsiini","mehukeitto"],
+  iltapala:["kauraleipa","ruisleipa","appelsiini","mehukeitto"],
+  lounas:["gluteeniton_pasta","kanakastike_kevyt","peruna"],
+  illallinen:["gluteeniton_pasta","kanakastike_kevyt","peruna"]
 };
 
-/* =================== STATE =================== */
 let dayData, isLocked=false;
 
 function emptyDay(){
-  return {foods:{aamupala:[],lounas:[],valipalat:[],illallinen:[],iltapala:[]},trainings:[]};
+  return { foods:{aamupala:[],lounas:[],valipalat:[],illallinen:[],iltapala:[]}, trainings:[] };
 }
 
-/* =================== UI BUILD =================== */
-function buildMeals(){
-  const container=document.getElementById("meals");
-  for(let meal in mealFoods){
-    container.innerHTML+=`
-    <div class="section" id="${meal}">
-      <h3>${meal.charAt(0).toUpperCase()+meal.slice(1)}</h3>
-      <div class="meal-controls">
-        <select id="${meal}Select"></select>
-        <input id="${meal}Grams" type="number" placeholder="g">
-        <button onclick="addFood('${meal}')">Lisää</button>
-      </div>
-      <div class="foods"></div>
-    </div>`;
-  }
+/* ---------- UI BUILD ---------- */
+const content=document.getElementById("content");
+for(const meal in mealNames){
+  content.innerHTML+=`
+  <div class="section" id="${meal}">
+    <h3>${mealNames[meal]}</h3>
+    <div class="meal-controls">
+      <select id="${meal}Select"></select>
+      <input id="${meal}Grams" type="number" placeholder="g">
+      <button onclick="addFood('${meal}')">Lisää</button>
+    </div>
+    <div class="foods"></div>
+  </div>`;
 }
 
 function fillSelects(){
-  for(let meal in mealFoods){
-    const sel=document.getElementById(meal+"Select");
-    sel.innerHTML='<option value="">Valitse ruoka</option>';
-    mealFoods[meal].sort().forEach(f=>{
-      sel.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`;
-    });
-    sel.addEventListener("change",()=>{
-      const g=document.getElementById(meal+"Grams");
-      g.value=sel.value?foodsDB[sel.value].default:"";
+  for(const meal in mealFoods){
+    const s=document.getElementById(meal+"Select");
+    s.innerHTML='<option value="">Valitse</option>';
+    mealFoods[meal].forEach(f=>{
+      s.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`;
     });
   }
 }
+fillSelects();
 
-/* =================== CORE =================== */
+/* ---------- LOGIC ---------- */
 function addFood(meal){
   if(isLocked) return;
   const sel=document.getElementById(meal+"Select");
-  const grams=document.getElementById(meal+"Grams");
-  if(!sel.value || !grams.value) return;
-  dayData.foods[meal].push({id:sel.value,grams:Number(grams.value)});
-  sel.value=""; grams.value="";
-  saveDraft(); render();
-}
-
-function removeFood(meal,i){
-  if(isLocked) return;
-  dayData.foods[meal].splice(i,1);
-  saveDraft(); render();
+  const g=Number(document.getElementById(meal+"Grams").value);
+  if(!sel.value||g<=0) return;
+  dayData.foods[meal].push({id:sel.value,grams:g});
+  render(); saveDraft();
 }
 
 function addTraining(){
   if(isLocked) return;
-  if(!trainingName.value || !trainingKcal.value) return;
-  dayData.trainings.push({name:trainingName.value,kcal:Number(trainingKcal.value)});
+  if(!trainingName.value||!trainingKcal.value) return;
+  dayData.trainings.push({name:trainingName.value,kcal:+trainingKcal.value});
   trainingName.value=""; trainingKcal.value="";
-  saveDraft(); render();
+  render(); saveDraft();
 }
 
-function removeTraining(i){
-  if(isLocked) return;
-  dayData.trainings.splice(i,1);
-  saveDraft(); render();
-}
-
-/* =================== RENDER =================== */
 function render(){
-  let foodKcal=0;
-  for(let meal in dayData.foods){
+  let totals={kcal:0,carbs:0,fat:0};
+
+  for(const meal in dayData.foods){
     const box=document.querySelector(`#${meal} .foods`);
     box.innerHTML="";
-    dayData.foods[meal].forEach((f,i)=>{
-      const kcal=Math.round(f.grams*foodsDB[f.id].kcal/100);
-      foodKcal+=kcal;
-      box.innerHTML+=`
-      <div class="item">${f.id.replaceAll("_"," ")} ${f.grams} g (${kcal} kcal)
-      <button onclick="removeFood('${meal}',${i})">❌</button></div>`;
+    dayData.foods[meal].forEach(f=>{
+      const db=foodsDB[f.id];
+      const mult=f.grams/100;
+      const kcal=Math.round(db.kcal*mult);
+      const c=Math.round(db.carbs*mult);
+      const r=Math.round(db.fat*mult);
+      totals.kcal+=kcal; totals.carbs+=c; totals.fat+=r;
+      box.innerHTML+=`${f.id.replaceAll("_"," ")} ${f.grams} g (${kcal} kcal, ${c}hh, ${r}r)<br>`;
     });
   }
 
-  trainings.innerHTML="";
-  dayData.trainings.forEach((t,i)=>{
-    trainings.innerHTML+=`
-    <div class="item">${t.name} (${t.kcal} kcal)
-    <button onclick="removeTraining(${i})">❌</button></div>`;
-  });
-
   const trainKcal=dayData.trainings.reduce((s,t)=>s+t.kcal,0);
-  const net=Math.round(foodKcal-(BMR+trainKcal));
+  const net=Math.round(totals.kcal-(BMR+trainKcal));
 
   summary.innerHTML=`
-    Ruoasta: ${foodKcal} kcal<br>
+    Ruoasta: ${totals.kcal} kcal, ${totals.carbs}hh, ${totals.fat}r<br>
     Perusaineenvaihdunta: ${BMR} kcal<br>
     Treeneistä: ${trainKcal} kcal<br><br>
     <strong>Netto: ${net} kcal</strong>
   `;
-
-  renderFiveDaySummary();
 }
 
-/* =================== 5 PÄIVÄÄ =================== */
-function renderFiveDaySummary(){
-  let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`,total=0;
-  for(let i=1;i<=5;i++){
-    const d=new Date(date.value); d.setDate(d.getDate()-i);
-    const key=d.toISOString().split("T")[0];
-    const stored=localStorage.getItem(key);
-    if(stored){
-      const data=JSON.parse(stored);
-      let fkc=0;
-      Object.values(data.foods).flat().forEach(f=>fkc+=f.grams*foodsDB[f.id].kcal/100);
-      let tk=data.trainings.reduce((s,t)=>s+t.kcal,0);
-      let n=Math.round(fkc-(BMR+tk)); total+=n;
-      let cls=n>0?"positive":n<0?"negative":"zero";
-      html+=`<div class="summary-box ${cls}"><h4>-${i}</h4>${n} kcal</div>`;
-    } else {
-      html+=`<div class="summary-box nodata"><h4>-${i}</h4>Ei dataa</div>`;
-    }
-  }
-  html+=`</div><br><strong>Yhteensä: ${total} kcal</strong>`;
-  fiveDaySummary.innerHTML=html;
-}
-
-/* =================== STORAGE =================== */
-function saveDraft(){ localStorage.setItem("draft-"+date.value,JSON.stringify(dayData)); }
-function saveDay(){ localStorage.setItem(date.value,JSON.stringify(dayData)); localStorage.removeItem("draft-"+date.value); lockDay(); }
-
-function lockDay(){
-  isLocked=true;
-  content.classList.add("locked");
-  saveBtn.style.display="none";
-  unlockBtn.style.display="block";
-}
-function unlockDay(){
-  isLocked=false;
-  content.classList.remove("locked");
-  saveBtn.style.display="block";
-  unlockBtn.style.display="none";
-}
-
-/* =================== BACKUP =================== */
-function downloadCSV(){
-  let csv="Päivämäärä,Kalorit ruoasta,Treenit,BMR,Netto\n";
-  for(let i=0;i<localStorage.length;i++){
-    const key=localStorage.key(i);
-    if(!/^\d{4}-\d{2}-\d{2}$/.test(key)) continue;
-    const d=JSON.parse(localStorage.getItem(key));
-    let f=0;
-    Object.values(d.foods).flat().forEach(x=>f+=x.grams*foodsDB[x.id].kcal/100);
-    let t=d.trainings.reduce((s,x)=>s+x.kcal,0);
-    csv+=`${key},${Math.round(f)},${t},${BMR},${Math.round(f-(BMR+t))}\n`;
-  }
-  const blob=new Blob([csv],{type:"text/csv"});
-  const a=document.createElement("a");
-  a.href=URL.createObjectURL(blob);
-  a.download="ruokaseuranta.csv";
-  a.click();
-}
-
+/* ---------- EXPORT ---------- */
 function downloadJSON(){
   const data={};
   for(let i=0;i<localStorage.length;i++){
     const k=localStorage.key(i);
-    data[k]=localStorage.getItem(k);
+    if(k.match(/^\d{4}-\d{2}-\d{2}$/)){
+      data[k]=JSON.parse(localStorage.getItem(k));
+    }
   }
   const blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
   const a=document.createElement("a");
@@ -295,28 +183,15 @@ function downloadJSON(){
   a.click();
 }
 
-function restoreJSON(e){
-  const file=e.target.files[0];
-  if(!file) return;
-  const r=new FileReader();
-  r.onload=()=>{
-    const data=JSON.parse(r.result);
-    localStorage.clear();
-    for(let k in data){ localStorage.setItem(k,data[k]); }
-    alert("Varmuuskopio palautettu. Lataa sivu uudelleen.");
-  };
-  r.readAsText(file);
-}
-
-/* =================== INIT =================== */
-buildMeals();
-fillSelects();
+/* ---------- STORAGE ---------- */
+function saveDraft(){ localStorage.setItem("draft-"+date.value,JSON.stringify(dayData)); }
+function saveDay(){ localStorage.setItem(date.value,JSON.stringify(dayData)); lockDay(); }
+function lockDay(){ isLocked=true; content.classList.add("locked"); saveBtn.style.display="none"; unlockBtn.style.display="inline"; }
+function unlockDay(){ isLocked=false; content.classList.remove("locked"); saveBtn.style.display="inline"; unlockBtn.style.display="none"; }
 
 date.addEventListener("change",()=>{
   const f=localStorage.getItem(date.value);
-  const d=localStorage.getItem("draft-"+date.value);
-  if(f){ dayData=JSON.parse(f); lockDay(); }
-  else { isLocked=false; content.classList.remove("locked"); saveBtn.style.display="block"; unlockBtn.style.display="none"; dayData=d?JSON.parse(d):emptyDay(); }
+  dayData=f?JSON.parse(f):emptyDay();
   render();
 });
 </script>
