--- a/dev2/index.html
+++ b/dev2/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.3.1</h4>
+<h4>versio 1.3.1a</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
