--- a/dev2/index.html
+++ b/dev2/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.3.1a</h4>
+<h4>versio 1.4</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -231,14 +231,19 @@ function render(){
 /* ================= 5 PÄIVÄÄ ================= */
 function renderFiveDaySummary(){
   let html=`<h3>5 päivän koonti</h3><div class="summary-boxes">`;
+  let totalKcal = 0, totalCarbs = 0, totalFat = 0;
+
   for(let i=1;i<=5;i++){
-    const d=new Date(date.value);d.setDate(d.getDate()-i);
-    const key=d.toISOString().split("T")[0];
-    const s=localStorage.getItem(key);
+    const d = new Date(date.value);
+    d.setDate(d.getDate()-i);
+    const key = d.toISOString().split("T")[0];
+    const s = localStorage.getItem(key);
+
     if(!s){
       html+=`<div class="summary-box nodata"><h4>-${i}</h4>Ei dataa</div>`;
       continue;
     }
+
     const data = JSON.parse(s);
     let kcal = 0, c = 0, r = 0;
 
@@ -248,21 +253,27 @@ function renderFiveDaySummary(){
       c    += f.grams * db.carbs / 100;
       r    += f.grams * db.fat / 100;
     });
-    
-    const kcalDiff = Math.round(kcal - BMR);
-    const carbDiff = Math.round(c - CARB_TARGET);
-    const fatDiff  = Math.round(r - FAT_TARGET);
-    const cls=diff>0?"positive":diff<0?"negative":"zero";
+
+    totalKcal  += kcal - BMR;
+    totalCarbs += c - CARB_TARGET;
+    totalFat   += r - FAT_TARGET;
+
+    const cls = (kcal-BMR) > 0 ? "positive" : (kcal-BMR) < 0 ? "negative" : "zero";
+
     html+=`<div class="summary-box ${cls}">
       <h4>-${i}</h4>
-      ${kcalDiff} kcal<br>
-      ${carbDiff} hh<br>
-      ${fatDiff} r
+      ${Math.round(kcal-BMR)} kcal<br>
+      ${Math.round(c-CARB_TARGET)} hh<br>
+      ${Math.round(r-FAT_TARGET)} r
     </div>`;
   }
+
   html+="</div>";
-  fiveDaySummary.innerHTML=html;
+  html+=`<br><strong>Yhteensä: ${Math.round(totalKcal)} kcal, ${Math.round(totalCarbs)} hh, ${Math.round(totalFat)} r</strong>`;
+
+  fiveDaySummary.innerHTML = html;
 }
+
 
 /* ================= TALLENNUS ================= */
 function saveDraft(){localStorage.setItem("draft-"+date.value,JSON.stringify(dayData));}
