--- a/dev2/index.html
+++ b/dev2/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.4</h4>
+<h4>versio 1.4.1</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -105,25 +105,31 @@ const FAT_TARGET = 72;
 
 /* ================= RUOKATIETOKANTA ================= */
 const foodsDB = {
-  appelsiini:{kcal:75,carbs:0,fat:0,default:100},
-  kauraleipa:{kcal:120,carbs:0,fat:0,default:100},
-  kaurapuuro_banaani:{kcal:450,carbs:0,fat:0,default:100},
-  kaurapuuro_piltti:{kcal:383,carbs:0,fat:0,default:100},
-  mehukeitto:{kcal:44,carbs:0,fat:0,default:400},
-  ruisleipa:{kcal:96,carbs:0,fat:0,default:100},
+  // Aamupalat & eväät
+  appelsiini: { kcal:75, carbs:12, fat:0, default:100 },
+  kauraleipa: { kcal:120, carbs:12.4, fat:5.6, default:100 },
+  kaurapuuro_banaani: { kcal:450, carbs:58, fat:5, default:100 },
+  kaurapuuro_piltti: { kcal:383, carbs:40, fat:4, default:100 },
+  mehukeitto: { kcal:44, carbs:11, fat:0, default:400 },
+  ruisleipa: { kcal:96, carbs:8.7, fat:4.6, default:100 },
+  kananmunapaistettu: { kcal:107, carbs:1, fat:16, default:100 },
+  mysli: { kcal:340, carbs:62, fat:3.5, default:0 },
+  kauragurtti: { kcal:80, carbs:15, fat:1.4, default:0 },
 
-  gluteeniton_pasta:{kcal:356,carbs:0,fat:0,default:0},
-  kanakastike_kevyt:{kcal:95,carbs:0,fat:0,default:0},
-  kanakastike_semi:{kcal:120,carbs:0,fat:0,default:0},
-  kanakastike_tuhti:{kcal:150,carbs:0,fat:0,default:0},
-  kanaperuna:{kcal:83,carbs:0,fat:0,default:0},
-  lasagne:{kcal:120,carbs:0,fat:0,default:0},
-  peruna:{kcal:75,carbs:0,fat:0,default:0},
-  perunamuussi:{kcal:120,carbs:0,fat:0,default:0},
-  tonnikalapihvit:{kcal:170,carbs:0,fat:0,default:0},
-  täysjyväpasta:{kcal:343,carbs:0,fat:0,default:0},
-  täysjyväriisi:{kcal:145,carbs:0,fat:0,default:0}
+  // Lämpimät ruoat
+  gluteeniton_pasta: { kcal:356, carbs:74, fat:2.4, default:0 },
+  kanakastike_kevyt: { kcal:95, carbs:4, fat:3, default:0 },
+  kanakastike_semi: { kcal:120, carbs:4, fat:5, default:0 },
+  kanakastike_tuhti: { kcal:150, carbs:5, fat:9, default:0 },
+  kanaperuna: { kcal:83, carbs:7, fat:4, default:0 },
+  lasagne: { kcal:120, carbs:8.5, fat:6.5, default:0 },
+  peruna: { kcal:75, carbs:16, fat:0.1, default:0 },
+  perunamuussi: { kcal:120, carbs:20, fat:3, default:0 },
+  tonnikalapihvit: { kcal:170, carbs:4, fat:12, default:0 },
+  täysjyväpasta: { kcal:343, carbs:66, fat:2.5, default:0 },
+  täysjyväriisi: { kcal:145, carbs:68, fat:0.8, default:0 }
 };
+
 
 const mealFoods={
   aamupala:["appelsiini","kauraleipa","kaurapuuro_banaani","kaurapuuro_piltti","mehukeitto","ruisleipa"],
