--- a/dev2/index.html
+++ b/dev2/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.4.1</h4>
+<h4>versio 1.4.2</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -150,7 +150,9 @@ function fillSelects(){
   for(let meal in mealFoods){
     const sel=document.getElementById(meal+"Select");
     sel.innerHTML='<option value="">Valitse ruoka</option>';
+    // Sortataan nimet aakkosjärjestykseen
     mealFoods[meal].sort().forEach(f=>{
+      // Näytetään nimi ilman alaviivaa
       sel.innerHTML+=`<option value="${f}">${f.replaceAll("_"," ")}</option>`;
     });
   }
@@ -199,7 +201,7 @@ function removeTraining(i){
 
 /* ================= RENDER ================= */
 function render(){
-  let kcal=0,carbs=0,fat=0;
+  let kcal=0, carbs=0, fat=0;
   for(let meal in dayData.foods){
     const box=document.querySelector(`#${meal} .foods`);
     box.innerHTML="";
@@ -208,9 +210,9 @@ function render(){
       const k=Math.round(f.grams*db.kcal/100);
       const c=Math.round(f.grams*db.carbs/100);
       const r=Math.round(f.grams*db.fat/100);
-      kcal+=k;carbs+=c;fat+=r;
+      kcal+=k; carbs+=c; fat+=r;
       box.innerHTML+=`<div class="item">
-        ${f.id.replaceAll("_"," ")} ${f.grams} g (${k} kcal, ${c}hh, ${r}r)
+        ${f.id.replaceAll("_"," ")} ${f.grams} g (${k} kcal, ${c} hh, ${r} r)
         <button onclick="removeFood('${meal}',${i})">❌</button>
       </div>`;
     });
@@ -222,17 +224,21 @@ function render(){
   dayData.trainings.forEach((t,i)=>{
     trainKcal+=t.kcal;
     trainBox.innerHTML+=`<div class="item">${t.name} (${t.kcal} kcal)
-    <button onclick="removeTraining(${i})">❌</button></div>`;
+      <button onclick="removeTraining(${i})">❌</button>
+    </div>`;
   });
 
+  // Yhteenveto
   summary.innerHTML=`
   Ruoasta: ${kcal} kcal, ${carbs} hh, ${fat} r<br>
   Perusaineenvaihdunta: ${BMR} kcal<br>
   Treeneistä: ${trainKcal} kcal<br><br>
-  <strong>Netto: ${kcal-(BMR+trainKcal)} kcal</strong>`;
+  <strong>Netto: ${kcal-(BMR+trainKcal)} kcal, ${carbs} hh, ${fat} r</strong>
+  `;
 
   renderFiveDaySummary();
 }
+
 
 /* ================= 5 PÄIVÄÄ ================= */
 function renderFiveDaySummary(){
