--- a/dev2/index.html
+++ b/dev2/index.html
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 1.4.3</h4>
+<h4>versio 1.4.4</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -112,7 +112,7 @@ const foodsDB = {
   kaurapuuro_piltti: { kcal:383, carbs:40, fat:4, default:100 },
   mehukeitto: { kcal:44, carbs:11, fat:0, default:400 },
   ruisleipa: { kcal:96, carbs:8.7, fat:4.6, default:100 },
-  kananmunapaistettu: { kcal:107, carbs:1, fat:16, default:100 },
+  kananmuna_paistettu: { kcal:107, carbs:1, fat:16, default:100 },
   mysli: { kcal:340, carbs:62, fat:3.5, default:0 },
   kauragurtti: { kcal:80, carbs:15, fat:1.4, default:0 },
 
@@ -139,7 +139,7 @@ const mealFoods = {
     "kaurapuuro_piltti",
     "mehukeitto",
     "ruisleipa",
-    "kananmuna paistettu",
+    "kananmuna_paistettu",
     "mysli",
     "kauragurtti"
   ],
@@ -150,7 +150,7 @@ const mealFoods = {
     "kaurapuuro_piltti",
     "mehukeitto",
     "ruisleipa",
-    "kananmuna paistettu",
+    "kananmuna_paistettu",
     "mysli",
     "kauragurtti"
   ],
@@ -161,7 +161,7 @@ const mealFoods = {
     "kaurapuuro_piltti",
     "mehukeitto",
     "ruisleipa",
-    "kananmuna paistettu",
+    "kananmuna_paistettu",
     "mysli",
     "kauragurtti"
   ],
