--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fi">
 <head>
 <meta charset="UTF-8">
@@ -27,7 +27,7 @@ select, input, button { padding: 0.4rem; }
 <body>
 
 <h2>Ruokaseuranta</h2>
-<h4>versio 2.0</h4>
+<h4>versio 2.0.1</h4>
 
 <div id="topButtons">
   <button onclick="downloadCSV()">CSV</button>
@@ -312,34 +312,34 @@ function renderFiveDaySummary(){
     }
 
     const data = JSON.parse(s);
-    let kcal = 0, c = 0, r = 0;
 
-    Object.values(data.foods).flat().forEach(f => {
-      const db = foodsDB[f.id];
-      kcal += f.grams * db.kcal / 100;
-      c    += f.grams * db.carbs / 100;
-      r    += f.grams * db.fat / 100;
-    });
+    // Oletetaan, että tallennetussa datassa on päivittäin lasketut nettoarvot
+    // eli: data.nettoKcal, data.nettoCarbs, data.nettoFat
+    // Jos ei ole, voi luoda ne saveDay() yhteydessä
+    const kcalDiff = Math.round(data.nettoKcal);
+    const carbDiff = Math.round(data.nettoCarbs);
+    const fatDiff  = Math.round(data.nettoFat);
 
-    totalKcal  += kcal - BMR;
-    totalCarbs += c - CARB_TARGET;
-    totalFat   += r - FAT_TARGET;
+    totalKcal  += kcalDiff;
+    totalCarbs += carbDiff;
+    totalFat   += fatDiff;
 
-    const cls = (kcal-BMR) > 0 ? "positive" : (kcal-BMR) < 0 ? "negative" : "zero";
+    const cls = kcalDiff > 0 ? "positive" : kcalDiff < 0 ? "negative" : "zero";
 
     html+=`<div class="summary-box ${cls}">
       <h4>-${i}</h4>
-      ${Math.round(kcal-BMR)} kcal<br>
-      ${Math.round(c-CARB_TARGET)} hh<br>
-      ${Math.round(r-FAT_TARGET)} r
+      ${kcalDiff} kcal<br>
+      ${carbDiff} hh<br>
+      ${fatDiff} r
     </div>`;
   }
 
   html+="</div>";
-  html+=`<br><strong>Yhteensä: ${Math.round(totalKcal)} kcal, ${Math.round(totalCarbs)} hh, ${Math.round(totalFat)} r</strong>`;
+  html+=`<br><strong>Yhteensä: ${totalKcal} kcal, ${totalCarbs} hh, ${totalFat} r</strong>`;
 
   fiveDaySummary.innerHTML = html;
 }
+
 
 
 /* ================= TALLENNUS ================= */
