--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ const mealFoods = {
   lounas: [
     "cajun",
     "gluteeniton_pasta",
-    "jauhenlihakastike,
+    "jauhenlihakastike",
     "kanakastike_kevyt",
     "kanakastike_semi",
     "kanakastike_tuhti",
@@ -206,7 +206,7 @@ const mealFoods = {
   illallinen: [
     "cajun",
     "gluteeniton_pasta",
-    "jauhenlihakastike,
+    "jauhenlihakastike",
     "kanakastike_kevyt",
     "kanakastike_semi",
     "kanakastike_tuhti",
