--- a/dev3/index.html
+++ b/dev3/index.html
@@ -139,8 +139,9 @@ input[type="date"]:focus { border-color: var(--accent); }
 .progress-fill { height: 100%; border-radius: 3px; transition: width 0.4s ease, background 0.3s; }
 
 /* ── MEAL SECTIONS ── */
-.meal-section { background: var(--surface); border: 1px solid var(--border); border-radius: var(--r); margin-bottom: 0.75rem; overflow: hidden; transition: border-color 0.2s; }
-.meal-section:focus-within { border-color: var(--border); }
+.meal-section { background: var(--surface); border: 1px solid var(--border); border-radius: var(--r); margin-bottom: 0.75rem; transition: border-color 0.2s; }
+.meal-section:not(.open) .meal-header { border-radius: var(--r); }
+.meal-section.open .meal-header { border-radius: var(--r) var(--r) 0 0; }
 
 .meal-header {
   display: flex;
@@ -350,7 +351,7 @@ input[type="range"]::-webkit-slider-thumb:hover { transform: scale(1.2); }
 <div class="header">
   <div class="header-title">
     <h1>Ruokaseuranta</h1>
-    <p>v2.3 — Supabase</p>
+    <p>v2.3.1 — Supabase</p>
   </div>
   <div class="header-actions">
     <button class="theme-btn ghost" onclick="toggleTheme()" id="themeBtn">☀️</button>
